--- a/never-scared/index.html
+++ b/never-scared/index.html
@@ -9,7 +9,15 @@
   <body>
     <div class="container">
       <h1>Never Scared</h1>
-      <video src="Never-Scared.mp4" autoplay loop controls></video>
+      <video
+        class="music"
+        src="Never-Scared.mp4"
+        autoplay
+        loop
+        controls
+      ></video>
+      <h1>NO SERIO!!!</h1>
+      <video class="spanish" src="NO-SERIO.mp4" autoplay loop controls></video>
     </div>
   </body>
 </html>
